# decicontas.br

./: .gitignore  CLAUDE.md  DUL.rdf  README.md  aed-decicontas.ipynb  decicontas.db  docker-compose.yml  document_tagging.ipynb  etl.ipynb  exp1_fewshot_supervised_summary.xlsx  exp2_method_comparison_summary.xlsx  exp3_prompt_engineering_summary.xlsx  lab.ipynb  ner.ipynb  ner_bilstm_bert.ipynb  ner_bilstm_bert_kfold_old.ipynb  ner_experiments.ipynb  ner_llm.ipynb  ner_openrouter_multi_model.ipynb  ner_results.ipynb  ner_results_old.ipynb  ner_results_summary.csv  ontology.ipynb  prompt_engineering_techniques.py  pyproject.toml  requirements.txt  sampling_gpt54_function_calling.ipynb  services.ipynb  tce_imports.owl  tce_model.owl
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: CLAUDE.md  alembic.ini  pyproject.toml
backend/app/: config.py  deps.py  main.py  worker.py
backend/app/auth/: router.py  schemas.py  security.py  service.py
backend/app/etl/: router.py  schemas.py
backend/app/migrations/: README.md  env.py
backend/app/migrations/versions/: 7a3c9f1b5d42_create_staging_tables.py  a7d2e1c5b389_extracao_status_columns.py  b2f4c89d0e1a_baseline.py  c1d4e9a8b6f3_create_auth_tables.py  d5f2a8e4b1c7_staging_ner_fk.py  e9a4b7c2f8d1_invert_review_semantics.py  f3b8c1e7a294_extraction_runs.py
backend/app/review/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_scaffolding.py
backend/tests/backend/: conftest.py
backend/tests/backend/auth/: test_role_enforcement.py  test_router.py  test_security.py
backend/tests/backend/etl/: conftest.py  test_router.py  test_worker.py
backend/tests/backend/review/: conftest.py  test_approve.py  test_claim.py  test_get.py  test_list.py  test_reject.py  test_schema_parity.py
backend/tests/tools/: conftest.py  test_dataset.py  test_fewshot.py  test_prompt.py  test_prompt_engineering.py  test_schema.py  test_utils.py
backend/tests/tools/etl/: conftest.py  test_pipeline.py  test_staging_models.py  test_text_alignment.py
dataset/: convert_to_label_studio.py  tcern_decisoes_2024_labelstudio.json  tcern_decisoes_2025.csv  tcern_decisoes_2025_labelstudio.json
dataset/errors/: dataset-corrections.json  erros_anotacao_decicontas.csv
dataset/errors/sensitivity/: p37_snippet.tex  statement.txt  versions.txt  weight_sensitivity.csv
dataset/experiments/few_shot_and_supervised/: models_results_decicontas_gpt-41-nano.json  neuralmind_bert-large-portuguese-cased__supervised.pkl  rufimelo_Legal-BERTimbau-base__supervised.pkl
dataset/experiments/function_calling_json_schema/: models_results_decicontas_gpt-35.json  models_results_decicontas_gpt-4o.json  models_results_decicontas_gpt-4o_few_shot_fc.json  models_results_decicontas_gpt-5.4-nano_few_shot_json.json
dataset/experiments/prompt_engineering/: models_results_decicontas_deepseek-v3_two_stage.json  (+5 more)
dataset/labeled_data/: complemento_decicontas.json  decicontas.conll  decicontas.json  decicontas_doc_tags.json  decicontas_doc_tags_predictions.pkl  decicontas_doc_tags_predictions_2.pkl  decicontas_doc_tags_predictions_all.pkl  decicontas_gpt_4o_errors.csv  decicontas_more_ressarcimentos.json  decicontas_v1.json  fewshot_decicontas.conll  fewshot_decicontas.json  golden_models_decicontas.json  models_results_decicontas_gpt-4-turbo.json
dataset/queries/: augmented_decisions.sql
dataset/raw/: tcern_decisoes_2024.csv  tcern_decisoes_2024_labelstudio.json  tcern_decisoes_2025.csv  tcern_decisoes_2025_labelstudio.json
dataset/release/: MANIFEST.json  README.md
dataset/results/: decicontas_doc_tags_results.json  decicontas_doc_tags_results_per_tag.json  decicontas_gpt_4o.csv  models_results_decicontas_gpt-4-turbo.json  models_results_decicontas_gpt-41-mini.json  models_results_decicontas_gpt-41.json  models_results_decicontas_gpt-5.4-mini_two_stage.json  ner_evaluation_summary.xlsx  results_bert.xlsx
docs/apresentacao/: index.html  roteiro.md
frontend/: CLAUDE.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: layout.tsx  (+2 more)
frontend/tests/: setup.ts
mcp/: services.py
mcp_services/: server.py  services.py
mlruns/0/: meta.yaml
notebooks/: aed-decicontas.ipynb  aed_cleanlab.ipynb  aed_decicontas.ipynb  document_tagging.ipynb  eda.ipynb  error_analysis.ipynb  etl.ipynb  etl_scratch.ipynb  lab.ipynb  merge_labelstudio.ipynb  ner.ipynb  ner_bilstm_bert.ipynb  ner_bilstm_bert_kfold.ipynb  ner_experiments.ipynb  ner_llm.ipynb  ner_results.ipynb  sampling_gpt54_function_calling.ipynb  services.ipynb  statistical_significance.ipynb
research/: dataset.py  dataset_io.py  fewshot.py  ner_metrics.py  prompt.py  prompt_engineering.py  schema.py
research/docs/: Capitulo4.tex  Capitulo5.tex
research/kfold/: build_report.py  config.py  data.py  embeddings.py  export_oof_to_significance.py  metrics.py  orchestrate.py  train_bert.py  train_bilstm.py
research/release/: __init__.py  apply_corrections.py  bootstrap_significance.py  chapter5_numbers.py  corpus_analysis.py  export_dataset.py  exporters.py  latex_fragments.py  paths.py  regenerate_figures.py  reproducibility_appendix.py  rescore_experiments.py  rescore_llms.py  run_fc_vs_json.py  run_llm_inference.py  stats.py
scripts/: cleanlab_weight_sensitivity.py  macro_bootstrap.py  probe_llm_metadata.py  temp0_sensitivity.py
sql/: citations_by_process.sql  citations_by_process_after.sql  decisions_base.sql  decisions_by_dates.sql  decisions_by_processes.sql  decisions_by_year_months.sql  decisions_full_text.sql  obligations_nonprocessed.sql  recommendations_nonprocessed.sql  responsible_unit.sql  units.sql
tests/: conftest.py  test_corpus_analysis.py  test_dataset.py  test_fewshot.py  test_ner_metrics_review.py  test_paths.py  test_prompt.py  test_prompt_engineering.py  test_run_llm_inference.py  test_schema.py
tests/fixtures/: labeled_sample.json
tools/: CLAUDE.md  dataset.py  fewshot.py  models.py  ner_metrics.py  prompt.py  pyproject.toml  schema.py  utils.py
tools/etl/: __init__.py  pipeline.py  staging.py  text_alignment.py
(+605 files in other folders)
