[tool.poetry]
name = "decicontas-br"
version = "0.1.0"
description = "NER pipeline for TCE/RN decisions"
authors = ["Eduardo Lima <eduardoplima@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
annotated-types = "0.7.0"
anyio = "4.9.0"
appdirs = "1.4.4"
argcomplete = "3.6.2"
asgiref = "3.8.1"
asttokens = "3.0.0"
attr = "0.3.1"
attrs = "25.3.0"
azure-core = "1.34.0"
azure-storage-blob = "12.25.1"
black = "25.1.0"
bleach = "5.0.1"
blis = "1.2.1"
boto = "2.49.0"
boto3 = "1.38.12"
botocore = "1.38.12"
cachetools = "5.5.2"
catalogue = "2.0.10"
certifi = "2025.4.26"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
click = "8.1.8"
cloudpathlib = "0.21.0"
colorama = "0.4.6"
comm = "0.2.2"
confection = "0.1.5"
cryptography = "44.0.3"
cymem = "2.0.11"
datamodel-code-generator = "0.26.1"
debugpy = "1.8.14"
decorator = "5.2.1"
defusedxml = "0.7.1"
deprecated = "1.2.18"
distro = "1.9.0"
django = "5.1.9"
django-annoying = "0.10.6"
django-cors-headers = "3.6.0"
django-csp = "3.7"
django-debug-toolbar = "3.2.1"
django-environ = "0.10.0"
django-extensions = "3.2.3"
django-filter = "24.3"
django-migration-linter = "5.2.0"
django-model-utils = "4.1.1"
django-ranged-fileresponse = "0.1.2"
django-rq = "2.10.3"
django-storages = "1.12.3"
django-user-agents = "0.4.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.4.0"
dnspython = "2.7.0"
drf-dynamic-fields = "0.3.0"
drf-flex-fields = "0.9.5"
drf-generators = "0.3.0"
email-validator = "2.2.0"
executing = "2.2.0"
expiringdict = "1.2.2"
faker = "37.1.0"
filelock = "3.18.0"
genson = "1.3.0"
google-api-core = "2.24.2"
google-auth = "2.40.1"
google-cloud-appengine-logging = "1.6.1"
google-cloud-audit-log = "0.3.2"
google-cloud-core = "2.4.3"
google-cloud-logging = "3.12.1"
google-cloud-storage = "2.19.0"
google-crc32c = "1.7.1"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.70.0"
greenlet = "3.2.3"
grpc-google-iam-v1 = "0.14.2"
grpcio = "1.71.0"
grpcio-status = "1.62.3"
h11 = "0.16.0"
hmmlearn = "0.3.3"
httpcore = "1.0.9"
httpx = "0.28.1"
humansignal-drf-yasg = "1.21.10.post1"
idna = "3.10"
ijson = "3.4.0"
importlib-metadata = "8.6.1"
inflect = "5.6.2"
inflection = "0.5.1"
ipykernel = "6.29.5"
ipython = "9.3.0"
ipython-pygments-lexers = "1.1.1"
isodate = "0.7.2"
isort = "5.13.2"
jedi = "0.19.2"
jinja2 = "3.1.6"
jiter = "0.9.0"
jmespath = "1.0.1"
joblib = "1.5.0"
jsf = "0.11.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2025.4.1"
jupyter-client = "8.6.3"
jupyter-core = "5.8.1"
label-studio = "1.17.0"
label-studio-sdk = "1.0.11"
langchain = "0.3.26"
langchain-core = "0.3.66"
langchain-openai = "0.3.25"
langchain-text-splitters = "0.3.8"
langcodes = "3.5.0"
langsmith = "0.4.1"
language-data = "1.3.0"
launchdarkly-server-sdk = "8.2.1"
lockfile = "0.12.2"
lxml = "5.4.0"
lxml-html-clean = "0.4.2"
marisa-trie = "1.2.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
murmurhash = "1.0.12"
mypy-extensions = "1.1.0"
nest-asyncio = "1.6.0"
nltk = "3.9.1"
numpy = "1.26.4"
openai = "1.91.0"
opentelemetry-api = "1.32.1"
ordered-set = "4.0.2"
orjson = "3.10.18"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "11.2.1"
platformdirs = "4.3.8"
preshed = "3.0.9"
prompt-toolkit = "3.0.51"
proto-plus = "1.26.1"
protobuf = "6.30.2"
psutil = "7.0.0"
psycopg2-binary = "2.9.10"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pyboxen = "1.3.0"
pycparser = "2.22"
pydantic = "2.11.4"
pydantic-core = "2.33.2"
pygments = "2.19.1"
pyjwt = "2.10.1"
pyrfc3339 = "2.0.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-json-logger = "2.0.4"
pytz = "2022.7.1"
pyyaml = "6.0.2"
pyzmq = "26.4.0"
redis = "5.2.1"
referencing = "0.36.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-file = "2.1.0"
requests-mock = "1.12.1"
requests-toolbelt = "1.0.0"
rich = "14.0.0"
rpds-py = "0.24.0"
rq = "1.16.2"
rsa = "4.9.1"
rstr = "3.2.2"
rules = "3.4"
s3transfer = "0.12.0"
scikit-learn = "1.6.1"
scipy = "1.15.3"
semver = "3.0.4"
sentry-sdk = "2.27.0"
seqeval = "1.2.2"
setuptools = "80.3.1"
shellingham = "1.5.4"
six = "1.17.0"
skweak = "0.3.3"
smart-open = "7.1.0"
sniffio = "1.3.1"
spacy = "3.8.5"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlalchemy = "2.0.41"
sqlparse = "0.5.3"
srsly = "2.5.1"
stack-data = "0.6.3"
tenacity = "9.1.2"
thinc = "8.3.4"
threadpoolctl = "3.6.0"
tiktoken = "0.9.0"
tldextract = "5.3.0"
toml = "0.10.2"
tornado = "6.5.1"
tqdm = "4.67.1"
traitlets = "5.14.3"
typer = "0.15.3"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
tzdata = "2025.2"
ua-parser = "1.0.1"
ua-parser-builtins = "0.18.0.post1"
ujson = "5.10.0"
uritemplate = "4.1.1"
urllib3 = "1.26.20"
user-agents = "2.2.0"
wasabi = "1.1.3"
wcwidth = "0.2.13"
weasel = "0.4.1"
webencodings = "0.5.1"
wheel = "0.40.0"
wrapt = "1.17.2"
xmljson = "0.2.1"
zipp = "3.21.0"
zstandard = "0.23.0"
langchain-community = "^0.3.26"


[tool.poetry.group.dev.dependencies]
skweak = "^0.3.3"
label-studio = "^1.17.0"
seqeval = "^1.2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
