[project]
name = "decicontas-backend"
version = "0.1.0"
description = "FastAPI review service for DeciContas.br."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "arq>=0.26",
    "redis>=5.0",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "tools[llm]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "freezegun>=1.5",
]

[tool.uv.sources]
tools = { workspace = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real MSSQL, Redis, or Azure OpenAI (skipped by default)",
    "slow: tests that take more than a couple of seconds",
]
addopts = "-ra --strict-markers --cov=tools --cov=app --cov-report=term-missing -m \"not integration\""
