[project]
name = "tools"
version = "0.1.0"
description = "Research library for DeciContas.br — NER pipelines, schemas, prompts, and ORMs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "pymssql>=2.3",
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.13",
    "pandas>=2.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "openai>=1.91",
    "numpy>=1.26",
]
experiments = [
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "seqeval>=1.2",
    "scikit-learn>=1.6",
    "spacy>=3.8",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "skweak>=0.3",
    "hmmlearn>=0.3",
    "nltk>=3.9",
    "label-studio>=1.17",
    "label-studio-sdk>=1.0",
]

[dependency-groups]
dev = ["ruff>=0.7"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]
package-dir = { "tools" = "." }
